spec/nuklear-with-options.x86_64-apple-darwin9.lisp


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2220:8"
(CFFI:DEFCSTRUCT (NK-STYLE-TAB :SIZE 784)
  (BACKGROUND (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 32)
  (TEXT (:STRUCT NK-COLOR) :OFFSET 36)
  (TAB-MAXIMIZE-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 40)
  (TAB-MINIMIZE-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 216)
  (NODE-MAXIMIZE-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 392)
  (NODE-MINIMIZE-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 568)
  (SYM-MINIMIZE NK-SYMBOL-TYPE :OFFSET 744)
  (SYM-MAXIMIZE NK-SYMBOL-TYPE :OFFSET 748)
  (BORDER :FLOAT :OFFSET 752)
  (ROUNDING :FLOAT :OFFSET 756)
  (INDENT :FLOAT :OFFSET 760)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 764)
  (SPACING (:STRUCT NK-VEC2) :OFFSET 772))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2242:6"
(CFFI:DEFCENUM NK-STYLE-HEADER-ALIGN
  (NK-HEADER-LEFT 0)
  (NK-HEADER-RIGHT 1))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2247:8"
(CFFI:DEFCSTRUCT (NK-STYLE-WINDOW-HEADER :SIZE 504)
  (NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 32)
  (ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 64)
  (CLOSE-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 96)
  (MINIMIZE-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 272)
  (CLOSE-SYMBOL NK-SYMBOL-TYPE :OFFSET 448)
  (MINIMIZE-SYMBOL NK-SYMBOL-TYPE :OFFSET 452)
  (MAXIMIZE-SYMBOL NK-SYMBOL-TYPE :OFFSET 456)
  (LABEL-NORMAL (:STRUCT NK-COLOR) :OFFSET 460)
  (LABEL-HOVER (:STRUCT NK-COLOR) :OFFSET 464)
  (LABEL-ACTIVE (:STRUCT NK-COLOR) :OFFSET 468)
  (ALIGN NK-STYLE-HEADER-ALIGN :OFFSET 472)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 476)
  (LABEL-PADDING (:STRUCT NK-VEC2) :OFFSET 484)
  (SPACING (:STRUCT NK-VEC2) :OFFSET 492))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2272:8"
(CFFI:DEFCSTRUCT (NK-STYLE-WINDOW :SIZE 712)
  (HEADER (:STRUCT NK-STYLE-WINDOW-HEADER) :OFFSET 0)
  (FIXED-BACKGROUND (:STRUCT NK-STYLE-ITEM) :OFFSET 504)
  (BACKGROUND (:STRUCT NK-COLOR) :OFFSET 536)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 540)
  (COMBO-BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 544)
  (CONTEXTUAL-BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 548)
  (MENU-BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 552)
  (GROUP-BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 556)
  (TOOLTIP-BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 560)
  (SCALER (:STRUCT NK-STYLE-ITEM) :OFFSET 568)
  (BORDER :FLOAT :OFFSET 600)
  (COMBO-BORDER :FLOAT :OFFSET 604)
  (CONTEXTUAL-BORDER :FLOAT :OFFSET 608)
  (MENU-BORDER :FLOAT :OFFSET 612)
  (GROUP-BORDER :FLOAT :OFFSET 616)
  (TOOLTIP-BORDER :FLOAT :OFFSET 620)
  (ROUNDING :FLOAT :OFFSET 624)
  (SPACING (:STRUCT NK-VEC2) :OFFSET 628)
  (SCROLLBAR-SIZE (:STRUCT NK-VEC2) :OFFSET 636)
  (MIN-SIZE (:STRUCT NK-VEC2) :OFFSET 644)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 652)
  (GROUP-PADDING (:STRUCT NK-VEC2) :OFFSET 660)
  (POPUP-PADDING (:STRUCT NK-VEC2) :OFFSET 668)
  (COMBO-PADDING (:STRUCT NK-VEC2) :OFFSET 676)
  (CONTEXTUAL-PADDING (:STRUCT NK-VEC2) :OFFSET 684)
  (MENU-PADDING (:STRUCT NK-VEC2) :OFFSET 692)
  (TOOLTIP-PADDING (:STRUCT NK-VEC2) :OFFSET 700))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2306:8"
(CFFI:DEFCSTRUCT (NK-STYLE :SIZE 7536)
  (FONT (:POINTER (:STRUCT NK-USER-FONT)) :OFFSET 0)
  (CURSORS (:ARRAY (:POINTER (:STRUCT NK-CURSOR)) 7) :OFFSET 8)
  (CURSOR-ACTIVE (:POINTER (:STRUCT NK-CURSOR)) :OFFSET 64)
  (CURSOR-LAST (:POINTER (:STRUCT NK-CURSOR)) :OFFSET 72)
  (CURSOR-VISIBLE :INT :OFFSET 80)
  (TEXT (:STRUCT NK-STYLE-TEXT) :OFFSET 84)
  (BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 96)
  (CONTEXTUAL-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 272)
  (MENU-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 448)
  (OPTION (:STRUCT NK-STYLE-TOGGLE) :OFFSET 624)
  (CHECKBOX (:STRUCT NK-STYLE-TOGGLE) :OFFSET 864)
  (SELECTABLE (:STRUCT NK-STYLE-SELECTABLE) :OFFSET 1104)
  (SLIDER (:STRUCT NK-STYLE-SLIDER) :OFFSET 1384)
  (PROGRESS (:STRUCT NK-STYLE-PROGRESS) :OFFSET 2024)
  (PROPERTY (:STRUCT NK-STYLE-PROPERTY) :OFFSET 2280)
  (EDIT (:STRUCT NK-STYLE-EDIT) :OFFSET 3592)
  (CHART (:STRUCT NK-STYLE-CHART) :OFFSET 4392)
  (SCROLLH (:STRUCT NK-STYLE-SCROLLBAR) :OFFSET 4456)
  (SCROLLV (:STRUCT NK-STYLE-SCROLLBAR) :OFFSET 5072)
  (TAB (:STRUCT NK-STYLE-TAB) :OFFSET 5688)
  (COMBO (:STRUCT NK-STYLE-COMBO) :OFFSET 6472)
  (WINDOW (:STRUCT NK-STYLE-WINDOW) :OFFSET 6824))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2332:29"
(CFFI:DEFCFUN ("nk_style_item_image" NK-STYLE-ITEM-IMAGE)
    (:STRUCT NK-STYLE-ITEM)
  (IMG (:STRUCT NK-IMAGE)))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2333:29"
(CFFI:DEFCFUN ("nk_style_item_color" NK-STYLE-ITEM-COLOR)
    (:STRUCT NK-STYLE-ITEM)
  (ARG1 (:STRUCT NK-COLOR)))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2334:29"
(CFFI:DEFCFUN ("nk_style_item_hide" NK-STYLE-ITEM-HIDE)
    (:STRUCT NK-STYLE-ITEM))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2343:8"
(CFFI:DEFCSTRUCT (NK-CHART-SLOT :SIZE 40)
  (TYPE NK-CHART-TYPE :OFFSET 0)
  (COLOR (:STRUCT NK-COLOR) :OFFSET 4)
  (HIGHLIGHT (:STRUCT NK-COLOR) :OFFSET 8)
  (MIN :FLOAT :OFFSET 12)
  (MAX :FLOAT :OFFSET 16)
  (RANGE :FLOAT :OFFSET 20)
  (COUNT :INT :OFFSET 24)
  (LAST (:STRUCT NK-VEC2) :OFFSET 28)
  (INDEX :INT :OFFSET 36))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2353:8"
(CFFI:DEFCSTRUCT (NK-CHART :SIZE 180)
  (SLOTS (:ARRAY (:STRUCT NK-CHART-SLOT) 4) :OFFSET 0)
  (SLOT :INT :OFFSET 160)
  (X :FLOAT :OFFSET 164)
  (Y :FLOAT :OFFSET 168)
  (W :FLOAT :OFFSET 172)
  (H :FLOAT :OFFSET 176))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2359:8"
(CFFI:DEFCSTRUCT (NK-ROW-LAYOUT :SIZE 64)
  (TYPE :INT :OFFSET 0)
  (INDEX :INT :OFFSET 4)
  (HEIGHT :FLOAT :OFFSET 8)
  (COLUMNS :INT :OFFSET 12)
  (RATIO (:POINTER :FLOAT) :OFFSET 16)
  (ITEM-WIDTH :FLOAT :OFFSET 24)
  (ITEM-HEIGHT :FLOAT :OFFSET 28)
  (ITEM-OFFSET :FLOAT :OFFSET 32)
  (FILLED :FLOAT :OFFSET 36)
  (ITEM (:STRUCT NK-RECT) :OFFSET 40)
  (TREE-DEPTH :INT :OFFSET 56))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2372:8"
(CFFI:DEFCSTRUCT (NK-POPUP-BUFFER :SIZE 40)
  (BEGIN NK-SIZE :OFFSET 0)
  (PARENT NK-SIZE :OFFSET 8)
  (LAST NK-SIZE :OFFSET 16)
  (END NK-SIZE :OFFSET 24)
  (ACTIVE :INT :OFFSET 32))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2380:8"
(CFFI:DEFCSTRUCT (NK-MENU-STATE :SIZE 20)
  (X :FLOAT :OFFSET 0)
  (Y :FLOAT :OFFSET 4)
  (W :FLOAT :OFFSET 8)
  (H :FLOAT :OFFSET 12)
  (OFFSET (:STRUCT NK-SCROLL) :OFFSET 16))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2385:8"
(CFFI:DEFCSTRUCT (NK-PANEL :SIZE 400)
  (FLAGS NK-FLAGS :OFFSET 0)
  (BOUNDS (:STRUCT NK-RECT) :OFFSET 4)
  (OFFSET (:POINTER (:STRUCT NK-SCROLL)) :OFFSET 24)
  (AT-X :FLOAT :OFFSET 32)
  (AT-Y :FLOAT :OFFSET 36)
  (MAX-X :FLOAT :OFFSET 40)
  (FOOTER-HEIGHT :FLOAT :OFFSET 44)
  (HEADER-HEIGHT :FLOAT :OFFSET 48)
  (BORDER :FLOAT :OFFSET 52)
  (HAS-SCROLLING :UNSIGNED-INT :OFFSET 56)
  (CLIP (:STRUCT NK-RECT) :OFFSET 60)
  (MENU (:STRUCT NK-MENU-STATE) :OFFSET 76)
  (ROW (:STRUCT NK-ROW-LAYOUT) :OFFSET 96)
  (CHART (:STRUCT NK-CHART) :OFFSET 160)
  (POPUP-BUFFER (:STRUCT NK-POPUP-BUFFER) :OFFSET 344)
  (BUFFER (:POINTER (:STRUCT NK-COMMAND-BUFFER)) :OFFSET 384)
  (PARENT (:POINTER (:STRUCT NK-PANEL)) :OFFSET 392))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2410:8"
(CFFI:DEFCSTRUCT (NK-TABLE :SIZE 0))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2411:6"
(CFFI:DEFBITFIELD NK-WINDOW-FLAGS
  (NK-WINDOW-PRIVATE 512)
  (NK-WINDOW-DYNAMIC 1024)
  (NK-WINDOW-ROM 2048)
  (NK-WINDOW-HIDDEN 4096)
  (NK-WINDOW-CLOSED 8192)
  (NK-WINDOW-MINIMIZED 16384)
  (NK-WINDOW-SUB 32768)
  (NK-WINDOW-GROUP 65536)
  (NK-WINDOW-POPUP 131072)
  (NK-WINDOW-NONBLOCK 262144)
  (NK-WINDOW-CONTEXTUAL 524288)
  (NK-WINDOW-COMBO 1048576)
  (NK-WINDOW-MENU 2097152)
  (NK-WINDOW-TOOLTIP 4194304)
  (NK-WINDOW-REMOVE-ROM 8388608))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2444:8"
(CFFI:DEFCSTRUCT (NK-WINDOW :SIZE 0))

(CFFI:DEFCSTRUCT (NK-POPUP-STATE :SIZE 40)
  (WIN (:POINTER (:STRUCT NK-WINDOW)) :OFFSET 0)
  (TYPE NK-WINDOW-FLAGS :OFFSET 8)
  (NAME NK-HASH :OFFSET 12)
  (ACTIVE :INT :OFFSET 16)
  (COMBO-COUNT :UNSIGNED-INT :OFFSET 20)
  (CON-COUNT :UNSIGNED-INT :OFFSET 24)
  (CON-OLD :UNSIGNED-INT :OFFSET 28)
  (ACTIVE-CON :UNSIGNED-INT :OFFSET 32))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2454:8"
(CFFI:DEFCSTRUCT (NK-EDIT-STATE :SIZE 40)
  (NAME NK-HASH :OFFSET 0)
  (SEQ :UNSIGNED-INT :OFFSET 4)
  (OLD :UNSIGNED-INT :OFFSET 8)
  (ACTIVE :INT :OFFSET 12)
  (PREV :INT :OFFSET 16)
  (CURSOR :INT :OFFSET 20)
  (SEL-START :INT :OFFSET 24)
  (SEL-END :INT :OFFSET 28)
  (SCROLLBAR (:STRUCT NK-SCROLL) :OFFSET 32)
  (MODE :UNSIGNED-CHAR :OFFSET 36)
  (SINGLE-LINE :UNSIGNED-CHAR :OFFSET 37))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2467:8"
(CFFI:DEFCSTRUCT (NK-PROPERTY-STATE :SIZE 96)
  (ACTIVE :INT :OFFSET 0)
  (PREV :INT :OFFSET 4)
  (BUFFER (:ARRAY :CHAR 64) :OFFSET 8)
  (LENGTH :INT :OFFSET 72)
  (CURSOR :INT :OFFSET 76)
  (NAME NK-HASH :OFFSET 80)
  (SEQ :UNSIGNED-INT :OFFSET 84)
  (OLD :UNSIGNED-INT :OFFSET 88)
  (STATE :INT :OFFSET 92))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2478:8"
(CFFI:DEFCSTRUCT (NK-TABLE :SIZE 0))

(CFFI:DEFCSTRUCT (NK-WINDOW :SIZE 400)
  (SEQ :UNSIGNED-INT :OFFSET 0)
  (NAME NK-HASH :OFFSET 4)
  (NAME-STRING (:ARRAY :CHAR 64) :OFFSET 8)
  (FLAGS NK-FLAGS :OFFSET 72)
  (BOUNDS (:STRUCT NK-RECT) :OFFSET 76)
  (SCROLLBAR (:STRUCT NK-SCROLL) :OFFSET 92)
  (BUFFER (:STRUCT NK-COMMAND-BUFFER) :OFFSET 96)
  (LAYOUT (:POINTER (:STRUCT NK-PANEL)) :OFFSET 160)
  (SCROLLBAR-HIDING-TIMER :FLOAT :OFFSET 168)
  (PROPERTY (:STRUCT NK-PROPERTY-STATE) :OFFSET 172)
  (POPUP (:STRUCT NK-POPUP-STATE) :OFFSET 272)
  (EDIT (:STRUCT NK-EDIT-STATE) :OFFSET 312)
  (SCROLLED :UNSIGNED-INT :OFFSET 352)
  (TABLES (:POINTER (:STRUCT NK-TABLE)) :OFFSET 360)
  (TABLE-COUNT :UNSIGNED-SHORT :OFFSET 368)
  (TABLE-SIZE :UNSIGNED-SHORT :OFFSET 370)
  (NEXT (:POINTER (:STRUCT NK-WINDOW)) :OFFSET 376)
  (PREV (:POINTER (:STRUCT NK-WINDOW)) :OFFSET 384)
  (PARENT (:POINTER (:STRUCT NK-WINDOW)) :OFFSET 392))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2548:1 <Spelling=<scratch space>:4:1>"
(CFFI:DEFCSTRUCT (NK-CONFIG-STACK-STYLE-ITEM-ELEMENT :SIZE 40)
  (ADDRESS (:POINTER (:STRUCT NK-STYLE-ITEM)) :OFFSET 0)
  (OLD-VALUE (:STRUCT NK-STYLE-ITEM) :OFFSET 8))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2549:1 <Spelling=<scratch space>:8:1>"
(CFFI:DEFCSTRUCT (NK-CONFIG-STACK-FLOAT-ELEMENT :SIZE 16)
  (ADDRESS (:POINTER :FLOAT) :OFFSET 0)
  (OLD-VALUE :FLOAT :OFFSET 8))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2550:1 <Spelling=<scratch space>:8:1>"
(CFFI:DEFCSTRUCT (NK-CONFIG-STACK-VEC2-ELEMENT :SIZE 16)
  (ADDRESS (:POINTER (:STRUCT NK-VEC2)) :OFFSET 0)
  (OLD-VALUE (:STRUCT NK-VEC2) :OFFSET 8))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2551:1 <Spelling=<scratch space>:8:1>"
(CFFI:DEFCSTRUCT (NK-CONFIG-STACK-FLAGS-ELEMENT :SIZE 16)
  (ADDRESS (:POINTER NK-FLAGS) :OFFSET 0)
  (OLD-VALUE NK-FLAGS :OFFSET 8))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2552:1 <Spelling=<scratch space>:8:1>"
(CFFI:DEFCSTRUCT (NK-CONFIG-STACK-COLOR-ELEMENT :SIZE 16)
  (ADDRESS (:POINTER (:STRUCT NK-COLOR)) :OFFSET 0)
  (OLD-VALUE (:STRUCT NK-COLOR) :OFFSET 8))

